添加欢迎页面

--- a/app/src/main/assets/web/main.html
+++ b/app/src/main/assets/web/main.html
@@ -1,1 +1,31 @@
-欢迎您！
+<!DOCTYPE html>
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width,initial-scale=1,user-scalable=0">
+    <script type="text/javascript" charset="UTF-8" src="aes/zepto.min.js"></script>
+
+    <link rel="stylesheet" href="aes/weui.min.css">
+    <link rel="stylesheet"
+          href="http://g.alicdn.com/msui/sm/0.6.2/css/sm.css">
+    <link rel="stylesheet"
+          href="http://g.alicdn.com/msui/sm/0.6.2/css/sm-extend.css">
+    <link rel="stylesheet" href="aes/sm-extend-local.css">
+    <link rel="stylesheet" href="aes/style.css?v=26">
+    <script type='text/javascript'
+            src='http://g.alicdn.com/sj/lib/zepto/zepto.js' charset='utf-8'></script>
+    <link rel="stylesheet" href="aes/zepto.js">
+    <link rel="stylesheet" href="aes/frozen.css">
+    <link rel="stylesheet" href="aes/myfrozen.css">
+
+
+
+</head>
+<body style="background:#ffffff">
+<div style="width:100%">
+    <img src="aes/welcome.jpg"  style="width:100%" />
+</div>
+
+
+
+</body>
+</html>
