--- a/app/src/main/assets/web/left.html
+++ b/app/src/main/assets/web/left.html
@@ -20,16 +20,129 @@
 
 
 </head>
-<body><div class="ui-selector-content" style="display:">
+<body>
+
+
+<div class="ui-selector-content" >
     <ul id="menuUl">
-        <li class="ui-selector-item active">
+        <li class="ui-selector-item active" style="display:none">
+            <h3 class="ui-border-b">
+                <p>作业分配</p><span class="ui-txt-info">...</span>
+            </h3>
+            <ul class="ui-list ui-border-b"  >
+                <li   id="app1" style="display:none">
+                    <div class="ui-avatar-s">
+                    </div>
+                    <div class="ui-list-info ui-border-t" ><h4>作业分配一</h4></div>
+                </li>
+                <li  id="app2" style="display:none">
+                    <div class="ui-avatar-s">
+                    </div>
+                    <div class="ui-list-info ui-border-t"><h4>作业分配二</h4></div>
+                </li>
+            </ul>
+        </li>
+        <li class="ui-selector-item " style="display:none">
+            <h3 class="ui-border-b">
+                <p>作业日报</p><span class="ui-txt-info">...</span>
+            </h3>
+            <ul class="ui-list ui-border-b"  >
+                <li  id="app3" style="display:none">
+                    <div class="ui-avatar-s">
+                    </div>
+                    <div class="ui-list-info ui-border-t" ><h4>日报录入</h4></div>
+                </li>
+                <li id="app4" style="display:none">
+                    <div class="ui-avatar-s">
+                    </div>
+                    <div class="ui-list-info ui-border-t"><h4>日报查询</h4></div>
+                </li>
+            </ul>
+        </li>
+        <li class="ui-selector-item " style="display:none">
+            <h3 class="ui-border-b">
+                <p>监督管理</p><span class="ui-txt-info">...</span>
+            </h3>
+            <ul class="ui-list ui-border-b"  >
+                <li  id="app5" style="display:none">
+                    <div class="ui-avatar-s">
+                    </div>
+                    <div class="ui-list-info ui-border-t" ><h4>作业监督</h4></div>
+                </li>
+                <li id="app6" style="display:none">
+                    <div class="ui-avatar-s">
+                    </div>
+                    <div class="ui-list-info ui-border-t"><h4>监督日志</h4></div>
+                </li>
+            </ul>
+        </li>
+        <li class="ui-selector-item " style="display:none">
+            <h3 class="ui-border-b">
+                <p>承包商管理</p><span class="ui-txt-info">...</span>
+            </h3>
+            <ul class="ui-list ui-border-b"  >
+                <li  id="app7" style="display:none">
+                    <div class="ui-avatar-s">
+                    </div>
+                    <div class="ui-list-info ui-border-t" ><h4>监督录入</h4></div>
+                </li>
+                <li id="app8" style="display:none">
+                    <div class="ui-avatar-s">
+                    </div>
+                    <div class="ui-list-info ui-border-t"><h4>整改录入</h4></div>
+                </li>
+                <li id="app9" style="display:none">
+                    <div class="ui-avatar-s">
+                    </div>
+                    <div class="ui-list-info ui-border-t"><h4>复查录入</h4></div>
+                </li>
+            </ul>
+        </li>
+        <li class="ui-selector-item " style="display:none">
+            <h3 class="ui-border-b">
+                <p>材料管理</p><span class="ui-txt-info">...</span>
+            </h3>
+            <ul class="ui-list ui-border-b"  >
+                <li  id="app10" style="display:none">
+                    <div class="ui-avatar-s">
+                    </div>
+                    <div class="ui-list-info ui-border-t" ><h4>材料待接收</h4></div>
+                </li>
+                <li id="app11" style="display:none">
+                    <div class="ui-avatar-s">
+                    </div>
+                    <div class="ui-list-info ui-border-t"><h4>材料待审核</h4></div>
+                </li>
+            </ul>
+        </li>
+        <li class="ui-selector-item " style="display:none">
+            <h3 class="ui-border-b">
+                <p>其他</p><span class="ui-txt-info">...</span>
+            </h3>
+            <ul class="ui-list ui-border-b"  >
+                <li  id="app99" style="display:none">
+                    <div class="ui-avatar-s">
+                    </div>
+                    <div class="ui-list-info ui-border-t" ><h4>交接井</h4></div>
+                </li>
+                <li id="app98" style="display:none">
+                    <div class="ui-avatar-s">
+                    </div>
+                    <div class="ui-list-info ui-border-t"><h4>施工总结</h4></div>
+                </li>
+            </ul>
+        </li>
+        <!-- <li class="ui-selector-item active">
             <h3 class="ui-border-b">
                 <p>暂无数据,请稍候...</p>
             </h3>
-        </li>
+        </li> -->
     </ul>
 </div>
-        <script type="text/javascript">
+
+
+
+<script type="text/javascript">
 
 var html = '';
 var x = window.adjs.getBaseUrl();
@@ -38,13 +151,18 @@ var urll = x+'common/getMenu'
 
 
 $.post(urll,{"username":window.adjs.getParam()}, function(data) {
-$('#menuUl').html('');
- $.each(data.rows, function(i, value) {
+//$('#menuUl').html('');
+            $.each(data.rows, function(i, value) {
+                console.log(value.tureMenuId);
+ 				$('#app'+value.tureMenuId).attr('style', '');
+ 				$('#app'+value.tureMenuId).attr('url', value.menuAddress);
+ 				$('#app'+value.tureMenuId).parent().parent().attr('style', '');
 		    	 html+='<li class="ui-selector-item " url="'+value.menuAddress+'"> <h3 class="ui-border-b"> <p class="ss">'+value.menuName+'</p><span class="ui-txt-info">...</span> </h3> </li>';
 		     });
 
 
-		     $('#menuUl').append(html+'');
+		     //$('#menuUl').append(html+'');
+		     var on;
 		     var on;
 		     $('.ui-selector-item').click(function(){
 		       var _this=$(this);
@@ -54,16 +172,17 @@ $('#menuUl').html('');
 		         $(this).removeClass('active');
 		       });
 		     })
-		     $('.ui-selector-item,.ui-tiled li').click(function(e){
+		     $('.ui-list li,.ui-tiled li').click(function(e){
+		    	//触发android webview跳转url
+		       window.adjs.action($(this).attr('url'),$(this).find('h4').text());
+		    	 e.stopPropagation();
 		       //触发android webview跳转url
-		       window.adjs.action($(this).attr('url'),$(this).find('.ss').text());
 		       //   window.adjs.action(0);
 		       //阻断事件
-		       e.stopPropagation();
 		     });
-		     $('.ui-header .ui-btn').click(function(){
+		     /* $('.ui-header .ui-btn').click(function(){
 		       location.href= 'index.html';
-		     });
+		     }); */
 },'json');
 
   function test() {
